# svn_kapsi

AudioBalance/: AndroidManifest.xml
AudioBalance/res/anim/: push_left_out.xml  push_right_out.xml
AudioBalance/res/layout/: activity_audioselector.xml  activity_calibrate.xml  activity_calibrate_volume.xml  activity_developer.xml  activity_main.xml  activity_main_release.xml  activity_mediaplayer.xml  activity_testvolume.xml  fragment_audiofileselector.xml  fragment_calibrate_delay.xml  fragment_calibrate_frequency.xml  fragment_calibrate_info.xml  fragment_calibration_summary.xml  fragment_calibration_summary_no_frequency.xml  fragment_calibration_summary_research.xml  listitem_audiofile.xml  listitem_dashboard_delay.xml  listitem_dashboard_frequency.xml  listitem_dashboard_playorder_research.xml
AudioBalance/res/menu/: main.xml
AudioBalance/res/values/: attrs.xml  dimens.xml  (+2 more)
ConsoleApplication1/: ConsoleApplication1.sln
ConsoleApplication1/ConsoleApplication1/: Program.cs  ShaderTest.cs  Terrain.cs  TerrainBlock.cs  TerrainGen.cs  TerrainHeightmap.cs  TerrainTest.csproj
SimuDemo/: Assembly-CSharp-Editor.csproj  Assembly-CSharp-vs.csproj  Assembly-UnityScript-Editor-vs.unityproj  Assembly-UnityScript-Editor.unityproj
SimuDemo/JsEngine/: GL.js  assets.js  file.js  main.js  meshrenderer.js  sceneprocessor.js  scenerenderer.js  unitygameobject.js  unitygl.js  unitymaterial.js  unitymesh.js  unitytransform.js  unitywrapper.js
SimuDemo/ProjectSettings/: ProjectSettings.asset  TagManager.asset
UnityDemoEditor/Assets/: MainScene.unity  MainSceneToinen.unity  demo.unity  minua.unity
UnityDemoEditor/JsEngine/: GL.js  assets.js  main.js  mat4.js  meshimport.js  meshrenderer.js  quat.js  sceneprocessor.js  scenerenderer.js  unitywrapper.js  utils.js  vec3.js
UnityDemoEditor2/: send
UnityDemoEditor2/JsEngine/: GL.js  Input.js  Time.js  assets.js  main.js  mat4.js  meshimport.js  meshrenderer.js  musa.js  quat.js  sceneprocessor.js  scenerenderer.js  unitygameobject.js  unitygl.js  unitymaterial.js  unitytime.js  unitytransform.js  unitywrapper.js
UnityDemoEditor2/stuffii/: tptzWYi.gifv
assets/: alien.blend  alien2.blend  alus.blend  alus2.blend  alus3.blend  ammus.blend  ben.blend  ben2.blend  f.blend  kaesi.blend  kakki.blend  kakki.blend1  kakki.f  meteo.blend  meteo2.blend  meteo2.f  simulaatio.blend  sphere.blend  testcube.blend  testikuutio.blend  testikuutio.f
assets/flo/: HARMONIA.X  alt_seina.X  bolo2.X  bolo2.blend  harmonia.blend  kiemur.X  kiemur.blend  kity.X  kity.blend  koriste.blend  paeyrae.X  paeyrae.blend  pankki.blend  pankki.x  piuha.X  piuha.blend  rattaus.X  rattaus.blend  renkas.X  renkas.blend  seppo_y.blend  seppo_y.x  tollpa.X  tv.x  vapaus.X  vapaus.blend
demo0/: demo0.sln
demo0/demo0/: DistanceFieldGenerator.cs  DistanceFieldGenerator2.cs  Heap.cs  Mesh.cs  MeshImporter.cs  Program.cs  Shader.cs  Texture3.cs  Utils.cs  demo0.csproj
demo0/exporter/: DistanceFieldGenerator.cs  MeshImporter.cs  Program.cs  Shader.cs  Texture3.cs  Utils.cs  demo0.csproj
espilon/espilon/: espilon.sln  espilon.vcxproj
espilon/src/: main.cpp
euler_cs/euler/: euler.sln
f22/f22/: f22.sln  f22.vcxproj  f22.vcxproj.filters
f22/rel/: info.txt
f22/src/: Demo.cpp  Demo.h  DemoResources.h  Fluid.cpp  Gfx.cpp  Gfx.h  boido.cpp  boido.h  kirves.cpp  kirves.h  main.cpp  poopie.h
fbase/: b.bat  checkout.bat  f.bat  geneclipse.bat  genmsvc.bat  runeclipse.bat  sxsdebug.bat
fbase/projects/: CMakeLists.txt
fbase/projects/fapp/: CMakeLists.txt
fbase/projects/fapp/src/: main.cpp
fbase/projects/fbase/: CMakeLists.txt
fbase/projects/fbase/fx/d3d10/: Common.fxh  Flat.fx  Particle.fx
fbase/projects/fbase/src/: DebugTools.h  FBase.h  FObj.cpp  FObj.h  File.cpp  File.h  WinDebug.h  Window.cpp  Window.h  const.h
fbase/projects/fbase/src/3d/: Camera.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.h  ParticleSystem.h  VertexBuffer.cpp  VertexBuffer.h  VertexType.h
fbase/projects/fbase/src/containers/: Array.cpp  Array.h  ByteStream.h  Map.cpp  Map.h  String.h  containers.h
fbase/projects/fbase/src/d3d10/: D3d10.cpp  D3d10.h  D3dDepthStencil.cpp  D3dDepthStencil.h  D3dEffect.cpp  D3dEffect.h  D3dEnums.cpp  D3dEnums.h  D3dIndexBuffer.cpp  D3dIndexBuffer.h  D3dRenderTarget.cpp  D3dRenderTarget.h  D3dTexture.cpp  D3dTexture.h  D3dVertexBuffer.cpp  D3dVertexBuffer.h  d3d10_mingw.h
fbase/projects/fbase/src/math/: Color.h  Fraction.h  Matrix.h  RectSize.h  Vector.h  math.h  misc.h
fbase/projects/fbase/src/math/algorithm/: RadixSort.cpp  RadixSort.h
fbase/projects/fbase/src/ogl/: ogl.h
flo_osa2/data/: f.f  koriste.f  meteo2.f  sphere.f
flo_osa2/flo_osa2/: flo_osa2.sln  flo_osa2.vcxproj
flo_stmd/rel/: info.txt
flo_stmd/src/: Demo.cpp  Demo.h  DemoResources.cpp  DemoResources.h  Dualism.h  Faderi.h  Gfx.cpp  Gfx.h  Sotkumi.h  Sync.h  main.cpp  mosho.h
flo_stmd/stmd/: stmd.sln  stmd.vcxproj  stmd.vcxproj.filters
io_mesh_f/: __init__.py  export_f.py
poopie/trunk/: shader_constants.txt
spacegame/project/: spacegame.sln  spacegame.vcxproj
spacegame/src/: ScalarField.cpp  ScalarField.h  SpaceBullet.cpp  SpaceBullet.h  SpaceEngine.cpp  SpaceEngine.h  SpaceInput.cpp  SpaceInput.h  SpaceObject.h  SpaceResources.h  SpaceShip.cpp  SpaceShip.h  SpaceTerrain.cpp  SpaceTerrain.h  TerrainGen.cpp  TerrainGen.h  TerrainMesh.cpp  TerrainMesh.h  TerrainMesh_old.cpp  TerrainRenderer.cpp  TerrainRenderer.h  Time.h  main.cpp  poopie_base.h  poopie_gfx.h  poopie_sfx.h
streamdemo/: f20.0.bat  f20.0.sh
streamdemo/html/: index.html
streamdemo/html2/: index.html
webdemo/html/: index.html
webspace/: deploy  deploy_heroku  deploy_kapsi
webspace/heroku/: index.html  package.json  server.js
webspace/html/: .jshintrc  run_jshint  run_plato
(+634 files in other folders)
